- R800: fixed flag behavior of block I/O instructions (only affect Z and N)
- OPL4: fixed aliasing in high pitched notes introduced in 17.0
- Apply Z80 CMOS behaviours to all MSX-ENGINE machines (not only turboR)
- Implemented the known differences between OPM (YM2151, as used in Yamaha
  SFG-01)) and OPP (YM2164, as used in Yamaha SFG-05)
- Fixed YM2151/YM2164 timer
- Fixed Sony HBI-55 emulation
- Fixed swapped redblue colors in laserdisc with SDLGL-PP
- Added disk-changed bit in Sony FDC interface, required for HB-F500P for
  instance
- Added support for Talent TDC-600 external floppy disk drive
- Added support for Canon FDC connectionstyle
- More accurate TC8566AF emulation (turboR FDC)
- Incorporated bug fixes in NukeYKT OPLL core from the upstream authors
- Implemented proper emulation of Konami EC-701, thanks to Albert Beevendorp
  and Takamichi Suzukawa
- Added initial support for Sega SG-1000 (and some preparations for SC-3000)
- Carnivore 2:
  - TODO updated initial (out-of-the-box) flash content, with bootmenu 2.50
- Use cleaned up disk ROMs in several configurations (without registers)
- Fixed several configs that had wronly a memory mapper: Sony HB-F1XD,
  HB-F1XDmk2, Panasonic FS-A1mk2
- added new machines/extensions, thanks to:
  - Peter Hanraets: Philips VG 8235/39, Panasonic CF-2700 (UK), Casio MX-15,
    Mitsubishi ML-G30 model 1, Mitsubishi ML-G30 model 2, Sanyo MPC-25FS,
    Mitsubishi ML-8000, Daewoo DPC-200 (French), Sony HB-F1XDmk2, Sony HBD-20W,
    Panasonic FS-PW1
  - sergarbes: Sony HB-F700S
  - Meits/Peter Hanraets: Philips VG 8235/20, several VG 8235 improvements.
  - Ricardo Jurcyk Pinheiro: Yamaha AX200
  - NYYRIKKI: Swedish/Finnish localized Spectravideo machines
  - friguron: Spanish Philips NMS 8250
  - Others: Canon V-30F

New or improved emulator features:
- Huge clean ups and fixes of the unicodemaps (using Rebecca's mapping tables,
  which were released as part of Unicode) and other keyboard