@@ -24,7 +24,7 @@ public:
 
 private:
 	// SoundDevice
-	void setOutputRate(unsigned sampleRate) override;
+	void setOutputRate(unsigned hostSampleRate, double speed) override;
 	void generateChannels(float** bufs, unsigned num) override;
 	bool updateBuffer(unsigned length, float* buffer,
 	                  EmuTime::param time) override;
