@@ -27,6 +27,7 @@ public:
 
 private:
 	// SoundDevice
+	void setOutputRate(unsigned hostSampleRate, double speed) override;
 	void generateChannels(float** bufs, unsigned num) override;
 	[[nodiscard]] float getAmplificationFactorImpl() const override;
 
